fix photolist item style on mobile device

--- a/src/css/photo-list.css
+++ b/src/css/photo-list.css
@@ -30,6 +30,13 @@
   }
 }
 
+@media (max-width: 600px) {
+  .photo-list__item {
+    width: 100%;
+  }
+}
+
+
 .photo-list__item-image {
   width: 100%;
 }
